trunk/Archive2/b0/caa95d92d7512a/output
main.cpp:4:17: error: expected '}' at end of input
 class Rectangle {
                 ^
main.cpp:4:17: error: expected unqualified-id at end of input
